# Realtime-Audio-Processing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Guitar Thing.cpp  Guitar Thing.sln  Guitar Thing.vcxproj  Guitar Thing.vcxproj.filters  README.md  RingBuffer.cpp  RingBuffer.h  csvPlot.py  data.csv  main.cpp  temp.csv
include/: AudioEffects.h  AudioMode.h  AudioState.h  EffectParameters.h  RingBuffer.h  Stream.h  UserInterface.h
lib/: portaudio.lib
src/: AudioEffects.cpp  AudioState.cpp  EffectParameters.cpp  RingBuffer.cpp  Stream.cpp  UserInterface.cpp  effectFlag.xmacro  effects.xmacro  main.cpp
